# old-university-projects

asa/: CMakeLists.txt  bfs_state.cpp  bfs_state.hpp  bloom_filter.cpp  bloom_filter.hpp  contig_writer.cpp  contig_writer.hpp  fasta.hpp  graph.cpp  graph.hpp  main.cpp  nucleotides.cpp  nucleotides.hpp  solidify.cpp  solidify.hpp  subtask_a.cpp  subtask_a.hpp  traversal_state.cpp  traversal_state.hpp
cccc/: .clang-format  .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  group.txt  run_tests.sh  select_tests.py
cccc/integration/optimize_prime/: test.py
cccc/integration/optimize_prime/exOutput/: comment.txt  comment_with_CR.txt  constant_valid_escape_sequence.txt  ex_sheet_1.txt  keywords.txt  multiline_comment.txt  punctuator.txt  punctuators_compact.txt  some_character_token.txt  stringFF.txt  string_token.txt
cccc/src/: application.cpp  cmd.cpp  file_loader.cpp  main.cpp  test_suite.cpp
cccc/src/ast/: binary_printer.cpp  primary_printer.cpp  statement_semicolon_printer.cpp  unary_printer.cpp
cccc/src/expressions/: arithmetic_binary.cpp  array_access.cpp  assign.cpp  binary.cpp  cast.cpp  character.cpp  comparison_binary.cpp  condition.cpp  decrement_unary.cpp  expression.cpp  function_call.cpp  increment_unary.cpp  inequality_binary.cpp  logical_and.cpp  logical_or.cpp  member_access.cpp  minus_unary.cpp  negation.cpp  number.cpp  plus_unary.cpp  primary.cpp  reference_unary.cpp  sizeof_unary.cpp  star_unary.cpp  string.cpp  unary.cpp  variable.cpp
cccc/src/include/: application.hpp  basic_parser.hpp  cmd.hpp  file_loader.hpp  test_suite.hpp  util
cccc/src/include/ast/: binary_printer.hpp  primary_printer.hpp  statement_semicolon_printer.hpp  unary_printer.hpp
cccc/src/include/expressions/: arithmetic_binary.hpp  array_access.hpp  assign.hpp  binary.hpp  cast.hpp  character.hpp  comparison_binary.hpp  condition.hpp  decrement_unary.hpp  expression.hpp  function_call.hpp  increment_unary.hpp  inequality_binary.hpp  logical_and.hpp  logical_or.hpp  member_access.hpp  minus_unary.hpp  negation.hpp  number.hpp  plus_unary.hpp  primary.hpp  reference_unary.hpp  sizeof_unary.hpp  star_unary.hpp  string.hpp  unary.hpp  variable.hpp
cccc/src/include/ir/: IRScope.hpp  irconstructer.hpp
cccc/src/include/lex/: dummy_parser.hpp  lexer.hpp  source_location.hpp  token.hpp  token_kind.def  token_kind.hpp
cccc/src/include/optimize/: SCCP.hpp  SCCPOptimizer.hpp  lattice_elem.hpp
cccc/src/include/parse/: operators.hpp  parser.hpp
cccc/src/include/sema/: analyzer.hpp  scope.hpp
cccc/src/include/statements/: block.hpp  break.hpp  continue.hpp  declaration.hpp  empty.hpp  expression.hpp  function.hpp  goto.hpp  if.hpp  label.hpp  return.hpp  statement.hpp  while.hpp
cccc/src/include/types/: array.hpp  function.hpp  integral.hpp  ptr.hpp  struct.hpp  thunk.hpp  type.hpp
cccc/src/ir/: IRScope.cpp  irconstructer.cpp
cccc/src/lex/: dummy_parser.cpp  lexer.cpp  source_location.cpp  token.cpp  token_kind.cpp
cccc/src/optimize/: SCCP.cpp  SCCPOptimizer.cpp  lattice_elem.cpp
cccc/src/parse/: operators.cpp  parser.cpp
cccc/src/sema/: analyzer.cpp  scope.cpp
cccc/src/statements/: block.cpp  break.cpp  continue.cpp  declaration.cpp  empty.cpp  expression.cpp  function.cpp  goto.cpp  if.cpp  label.cpp  return.cpp  statement.cpp  while.cpp
cccc/src/types/: array.cpp  function.cpp  integral.cpp  ptr.cpp  struct.cpp  thunk.cpp  type.cpp
cccc/tests/: cnt103.tmp  cnt32.tmp  cnt71.tmp  cnt86.tmp  fuzzer.py
cccc/tests/ast/: execute_tests.py
cccc/tests/ast/c_files/: declarators.c  digraph.c  factorial.c  fibonacci.c  hello.c  nested_selection.c  parent_discard.c  sample.c  sample_mod.c  simple.c  sizeofsizeof.c  statements.c  struct_in_param.c  struct_ret_pointer.c
cccc/tests/ast/exOutput/: declarators.txt  digraph.txt  factorial.txt  fibonacci.txt  hello.txt  nested_selection.txt  parent_discard.txt  select.txt  simple.txt  sizeofsizeof.txt  statements.txt  struct_in_param.txt  struct_ret_pointer.txt  structpar.txt
cccc/tests/lexer/: character_constants_spec.cpp  comments_spec.cpp  identifier_spec.cpp  location_spec.cpp  misc_spec.cpp  numeric_constants_spec.cpp  punctuator_spec.cpp  strings_spec.cpp  test_all.sh
cccc/tests/parser/: declaration_spec.cpp  example_spec.cpp  expression_spec.cpp  simple_spec.cpp  statement_spec.cpp  test_all.sh
cccc/tests/semantic/: constraint_spec.cpp  name_spec.cpp  simple_spec.cpp  test_all.sh  type_spec.cpp
cg18/: .drone.yml  .gitignore  CMakeLists.txt  assignment-02.cmake  watch_your_back.md
cg18/core/: color.cpp  float4.cpp  interpolate-impl.h  interpolate.cpp  interpolate.h  matrix.cpp  matrix.h  scalar.h
cg18/main/: a1.h  a_bump.cpp  a_distributed.cpp  a_indexing.cpp  a_instancing.cpp  a_lighting.cpp  a_mappers.cpp  main.cpp  scenetests.cpp  scoped_timer.h
cg18/rt/: bbox.cpp  bbox.h  intersection.cpp  intersection.h  primitive.h  ray.cpp  world.h
cg18/rt/cameras/: orthographic.h  perspective.cpp  perspective.h
cg18/rt/coordmappers/: cylindrical.cpp  tmapper.h  world.cpp  world.h
cg18/rt/groups/: bvhbuilder.cpp  bvhbuilder.h  group.h  simplegroup.h
cg18/rt/integrators/: casting.cpp  castingdist.cpp  castingdist.h  integrator.h  raytrace.cpp  recraymarching.h  recraytrace.h  volumetracer.h
cg18/rt/lights/: arealight.cpp  arealight.h  directional.h  pointlight.h  projectivecolorlight.h  projectivelight.cpp  projectivelight.h
cg18/rt/loaders/: obj.cpp  obj.h
cg18/rt/materials/: cooktorrance.cpp  dummy.h  flatmaterial.cpp  flatmaterial.h  fuzzymirror.h  glass.h  phong.cpp
cg18/rt/primmod/: instance.cpp
cg18/rt/solids/: aabox.cpp  infiniteplane.h  quad.cpp  quadric.h  sky.h  striangle.cpp
cg18/rt/textures/: checkerboard.cpp  checkerboard.h  constant.cpp  constant.h  imagetex.h  perlin.cpp
cg18/rt/volumes/: heterogenousfog.h  uniformfog.cpp  uniformfog.h  uniformfogambientlight.cpp  volume.h
rt/: .clang-format  assignment-01.cmake  assignment-04.cmake  assignment-05.cmake  assignment-06.cmake  assignment-07.cmake  assignment-08.cmake  assignment-rc.cmake
rt/core/: float4.h  point.cpp  (+5 more)
(+73 files in other folders)
