cmake_minimum_required(VERSION 2.8)

project(c4_test)

# Options. Turn off with 'cmake -Dtest=OFF'.
option(test "Build all tests." ON) # Makes boolean 'test' available.

set(CMAKE_CXX_FLAGS "-Wall -std=c++11 -Wextra -pedantic -Werror -Wno-unused-variable -Wno-unused-parameter -Wno-return-type -ggdb")

if (test)
  if (APPLE)
    add_definitions(-DGTEST_USE_OWN_TR1_TUPLE)
    add_definitions(-D__GLIBCXX__)
  endif (APPLE)

  add_definitions(-D__WE_TEST_NOW_WITH_GOOGLETEST__)

  # This adds another subdirectory, which has 'project(gtest)'.
  add_subdirectory(gtest)

  enable_testing()

  find_path(LLVM_DIR LLVM-Config.cmake ${CMAKE_SOURCE_DIR}/llvm/build/lib/cmake/llvm)
  find_package(LLVM REQUIRED CONFIG)
  # Include the gtest library. gtest_SOURCE_DIR is available due to
  # 'project(gtest)' above.
  include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR} ${LLVM_INCLUDE_DIRS} ${CMAKE_SOURCE_DIR}/src/include)
  add_definitions(${LLVM_DEFINITIONS})

  file(GLOB_RECURSE SOURCES ${CMAKE_SOURCE_DIR}/src/*.cpp)

  function(generate_test_all_script)
    execute_process(
        COMMAND bash -c "echo -ne \"#!/usr/bin/env bash\nrun-parts ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/.\n\""
        OUTPUT_VARIABLE test_script
    )
    file(WRITE "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/test_all.sh" "${test_script}")
    execute_process(COMMAND bash -c "chmod +x ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/test_all.sh")
  endfunction()

  ##################
  ## TEST GROUPS
  #### LEXER
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tests/lexer)
  add_executable(lexer_numeric_constants ${CMAKE_SOURCE_DIR}/tests/lexer/numeric_constants_spec.cpp ${SOURCES})
  add_executable(lexer_character_constants ${CMAKE_SOURCE_DIR}/tests/lexer/character_constants_spec.cpp ${SOURCES})
  add_executable(lexer_comments ${CMAKE_SOURCE_DIR}/tests/lexer/comments_spec.cpp ${SOURCES})
  add_executable(lexer_strings ${CMAKE_SOURCE_DIR}/tests/lexer/strings_spec.cpp ${SOURCES})
  add_executable(lexer_identifiers ${CMAKE_SOURCE_DIR}/tests/lexer/identifier_spec.cpp ${SOURCES})
  add_executable(lexer_punctuators ${CMAKE_SOURCE_DIR}/tests/lexer/punctuator_spec.cpp ${SOURCES})
  add_executable(lexer_locations ${CMAKE_SOURCE_DIR}/tests/lexer/location_spec.cpp ${SOURCES})
  add_executable(lexer_misc ${CMAKE_SOURCE_DIR}/tests/lexer/misc_spec.cpp ${SOURCES})
  generate_test_all_script() #lexer

  #### PARSER
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tests/parser)
  add_executable(parser_simple ${CMAKE_SOURCE_DIR}/tests/parser/simple_spec.cpp ${SOURCES})
  add_executable(parser_declarations ${CMAKE_SOURCE_DIR}/tests/parser/declaration_spec.cpp ${SOURCES})
  add_executable(parser_expression ${CMAKE_SOURCE_DIR}/tests/parser/expression_spec.cpp ${SOURCES})
  add_executable(parser_statements ${CMAKE_SOURCE_DIR}/tests/parser/statement_spec.cpp ${SOURCES})
  add_executable(parser_examples ${CMAKE_SOURCE_DIR}/tests/parser/example_spec.cpp ${SOURCES})
  generate_test_all_script() #parser

  #### SEMANTIC
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tests/semantic)
  add_executable(semantic_simple ${CMAKE_SOURCE_DIR}/tests/semantic/simple_spec.cpp ${SOURCES})
  add_executable(semantic_type ${CMAKE_SOURCE_DIR}/tests/semantic/type_spec.cpp ${SOURCES})
  add_executable(semantic_name ${CMAKE_SOURCE_DIR}/tests/semantic/name_spec.cpp ${SOURCES})
  add_executable(semantic_constraint ${CMAKE_SOURCE_DIR}/tests/semantic/constraint_spec.cpp ${SOURCES})
  generate_test_all_script() #semantic

  ##################

  # Standard linking to gtest stuff.
  ## LEXER
  target_link_libraries(lexer_numeric_constants gtest gtest_main LLVMCore LLVMSupport LLVMPasses LLVMAnalysis LLVMTransformUtils)
  target_link_libraries(lexer_character_constants gtest gtest_main LLVMCore LLVMSupport LLVMPasses LLVMAnalysis LLVMTransformUtils)
  target_link_libraries(lexer_comments gtest gtest_main LLVMCore LLVMSupport LLVMPasses LLVMAnalysis LLVMTransformUtils)
  target_link_libraries(lexer_strings gtest gtest_main LLVMCore LLVMSupport LLVMPasses LLVMAnalysis LLVMTransformUtils)
  target_link_libraries(lexer_identifiers gtest gtest_main LLVMCore LLVMSupport LLVMPasses LLVMAnalysis LLVMTransformUtils)
  target_link_libraries(lexer_punctuators gtest gtest_main LLVMCore LLVMSupport LLVMPasses LLVMAnalysis LLVMTransformUtils)
  target_link_libraries(lexer_locations gtest gtest_main LLVMCore LLVMSupport LLVMPasses LLVMAnalysis LLVMTransformUtils)
  target_link_libraries(lexer_misc gtest gtest_main LLVMCore LLVMSupport LLVMPasses LLVMAnalysis LLVMTransformUtils)
  ## PARSER
  target_link_libraries(parser_simple gtest gtest_main LLVMCore LLVMSupport LLVMPasses LLVMAnalysis LLVMTransformUtils)
  target_link_libraries(parser_declarations gtest gtest_main LLVMCore LLVMSupport LLVMPasses LLVMAnalysis LLVMTransformUtils)
  target_link_libraries(parser_expression gtest gtest_main LLVMCore LLVMSupport LLVMPasses LLVMAnalysis LLVMTransformUtils)
  target_link_libraries(parser_statements gtest gtest_main LLVMCore LLVMSupport LLVMPasses LLVMAnalysis LLVMTransformUtils)
  target_link_libraries(parser_examples gtest gtest_main LLVMCore LLVMSupport LLVMPasses LLVMAnalysis LLVMTransformUtils)
  ## SEMANTIC
  target_link_libraries(semantic_simple gtest gtest_main LLVMCore LLVMSupport LLVMPasses LLVMAnalysis LLVMTransformUtils)
  target_link_libraries(semantic_name gtest gtest_main LLVMCore LLVMSupport LLVMPasses LLVMAnalysis LLVMTransformUtils)
  target_link_libraries(semantic_type gtest gtest_main LLVMCore LLVMSupport LLVMPasses LLVMAnalysis LLVMTransformUtils)
  target_link_libraries(semantic_constraint gtest gtest_main LLVMCore LLVMSupport LLVMPasses LLVMAnalysis LLVMTransformUtils)

  # helper-function
  function(mhc4_test arg0 arg1 arg2)
    add_test(${arg2} ${CMAKE_BINARY_DIR}/tests/${arg0}/${arg1} --gtest_filter=${arg1}.${arg2})
  endfunction()

  ##################
  ## SINGLE TESTS
  #### LEXER
  mhc4_test(lexer lexer_numeric_constants numeric_simple)
  mhc4_test(lexer lexer_numeric_constants numeric_long_num)
  mhc4_test(lexer lexer_numeric_constants numeric_neg)
  mhc4_test(lexer lexer_numeric_constants numeric_zero)

  mhc4_test(lexer lexer_character_constants charseq_simple_0)
  mhc4_test(lexer lexer_character_constants charseq_simple_1)
  mhc4_test(lexer lexer_character_constants charseq_none)
  mhc4_test(lexer lexer_character_constants charseq_escape_seq_0)
  mhc4_test(lexer lexer_character_constants charseq_escape_seq_1)
  mhc4_test(lexer lexer_character_constants charseq_escape_seq_2)
  mhc4_test(lexer lexer_character_constants charseq_escape_seq_3)
  mhc4_test(lexer lexer_character_constants charseq_escape_seq_4)
  mhc4_test(lexer lexer_character_constants charseq_escape_seq_5)
  mhc4_test(lexer lexer_character_constants charseq_escape_seq_6)
  mhc4_test(lexer lexer_character_constants charseq_escape_seq_7)
  mhc4_test(lexer lexer_character_constants charseq_escape_seq_8)
  mhc4_test(lexer lexer_character_constants charseq_escape_seq_9)
  mhc4_test(lexer lexer_character_constants charseq_escape_seq_90)
  mhc4_test(lexer lexer_character_constants charseq_invalid_escape_seq)
  mhc4_test(lexer lexer_character_constants charseq_invalid_char_constant)

  mhc4_test(lexer lexer_comments comment_simple_0)
  mhc4_test(lexer lexer_comments comment_simple_1)
  mhc4_test(lexer lexer_comments comment_simple_2)
  mhc4_test(lexer lexer_comments comment_complex_0)
  mhc4_test(lexer lexer_comments comment_complex_1)
  mhc4_test(lexer lexer_comments comment_simple_multiline_0)
  mhc4_test(lexer lexer_comments comment_simple_multiline_1)
  mhc4_test(lexer lexer_comments comment_simple_multiline_2)
  mhc4_test(lexer lexer_comments comment_simple_multiline_3)
  mhc4_test(lexer lexer_comments comment_simple_multiline_4)
  mhc4_test(lexer lexer_comments comment_simple_multiline_5)
  mhc4_test(lexer lexer_comments comment_not_closed)
  mhc4_test(lexer lexer_comments comment_not_closed_multiline_0)
  mhc4_test(lexer lexer_comments comment_not_closed_multiline_1)
  mhc4_test(lexer lexer_comments comment_not_closed_multiline_2)
  mhc4_test(lexer lexer_comments comment_not_closed_multiline_3)
  mhc4_test(lexer lexer_comments comment_not_closed_multiline_4)
  mhc4_test(lexer lexer_comments comment_not_closed_multiline_5)
  mhc4_test(lexer lexer_comments comment_not_closed_multiline_6)
  mhc4_test(lexer lexer_comments comment_multiline)
  mhc4_test(lexer lexer_comments comment_multiline_with_CR)
  mhc4_test(lexer lexer_comments comment_multiline_with_CRLF)
  mhc4_test(lexer lexer_comments comment_inv_char_0)
  mhc4_test(lexer lexer_comments comment_inv_char_1)
  mhc4_test(lexer lexer_comments comment_inv_char_2)

  mhc4_test(lexer lexer_strings string_empty)
  mhc4_test(lexer lexer_strings string_single_char)
  mhc4_test(lexer lexer_strings string_two_chars)
  mhc4_test(lexer lexer_strings string_two_backslashes)
  mhc4_test(lexer lexer_strings string_unescaped_backslash)
  mhc4_test(lexer lexer_strings string_not_closed_0)
  mhc4_test(lexer lexer_strings string_not_closed_1)
  mhc4_test(lexer lexer_strings string_space)
  mhc4_test(lexer lexer_strings string_multiple_characters_0)
  mhc4_test(lexer lexer_strings string_multiple_characters_1)
  mhc4_test(lexer lexer_strings string_multiple_characters_2)
  mhc4_test(lexer lexer_strings string_multiple_characters_3)
  mhc4_test(lexer lexer_strings string_multiple_characters_4)
  mhc4_test(lexer lexer_strings string_multiple_characters_5)
  mhc4_test(lexer lexer_strings string_multiple_characters_6)
  mhc4_test(lexer lexer_strings string_multiple_characters_7)
  mhc4_test(lexer lexer_strings string_multiple_characters_8)
  mhc4_test(lexer lexer_strings string_multiple_characters_9)
  mhc4_test(lexer lexer_strings string_escape_sequences)
  mhc4_test(lexer lexer_strings string_line_break)
  mhc4_test(lexer lexer_strings string_form_feed_out)
  mhc4_test(lexer lexer_strings string_form_feed)
  mhc4_test(lexer lexer_strings string_unterminated)
  mhc4_test(lexer lexer_strings string_with_pseudo_comment)
  mhc4_test(lexer lexer_strings string_with_char_FF)
  mhc4_test(lexer lexer_strings string_with_chars_multiple)
  mhc4_test(lexer lexer_strings string_combination)
  mhc4_test(lexer lexer_strings string_formatting_within)

  mhc4_test(lexer lexer_identifiers identifier_basic_0)
  mhc4_test(lexer lexer_identifiers identifier_basic_1)
  mhc4_test(lexer lexer_identifiers identifier_basic_2)
  mhc4_test(lexer lexer_identifiers identifier_basic_with_numbers_0)
  mhc4_test(lexer lexer_identifiers identifier_basic_with_numbers_1)
  mhc4_test(lexer lexer_identifiers identifier_basic_with_numbers_2)
  mhc4_test(lexer lexer_identifiers identifier_underscore_0)
  mhc4_test(lexer lexer_identifiers identifier_underscore_1)
  mhc4_test(lexer lexer_identifiers identifier_complex)
  mhc4_test(lexer lexer_identifiers identifier_two_divided_by_CRLF)

  mhc4_test(lexer lexer_punctuators punctuator_simple_0)
  mhc4_test(lexer lexer_punctuators punctuator_simple_1)
  mhc4_test(lexer lexer_punctuators punctuator_pair)
  mhc4_test(lexer lexer_punctuators punctuator_two_character)
  mhc4_test(lexer lexer_punctuators punctuator_three_character)
  mhc4_test(lexer lexer_punctuators punctuator_period_numeric_combination)
  mhc4_test(lexer lexer_punctuators punctuator_two)
  mhc4_test(lexer lexer_punctuators punctuator_two_dots)
  mhc4_test(lexer lexer_punctuators punctuator_complex)

  mhc4_test(lexer lexer_locations location_lf_0)
  mhc4_test(lexer lexer_locations location_lf_1)
  mhc4_test(lexer lexer_locations location_cr_0)
  mhc4_test(lexer lexer_locations location_cr_1)
  mhc4_test(lexer lexer_locations location_crlf_0)
  mhc4_test(lexer lexer_locations location_crlf_1)
  mhc4_test(lexer lexer_locations location_column)
  mhc4_test(lexer lexer_locations location_row_0)
  mhc4_test(lexer lexer_locations location_row_1)
  mhc4_test(lexer lexer_locations location_fail_location_0)
  mhc4_test(lexer lexer_locations location_fail_location_1)
  mhc4_test(lexer lexer_locations location_fail_location_2)

  mhc4_test(lexer lexer_misc misc_all_toks)
  mhc4_test(lexer lexer_misc misc_example_c_standard)
  mhc4_test(lexer lexer_misc misc_empty_0)
  mhc4_test(lexer lexer_misc misc_empty_1)
  mhc4_test(lexer lexer_misc misc_empty_2)
  mhc4_test(lexer lexer_misc misc_empty_3)

  #### PARSER
  mhc4_test(parser parser_simple simple_empty)
  mhc4_test(parser parser_simple simple_basic_body)
  mhc4_test(parser parser_simple simple_function_call)
  mhc4_test(parser parser_simple simple_big_number_int_0)
  mhc4_test(parser parser_simple simple_big_number_int_1)
  mhc4_test(parser parser_simple simple_big_number_int_2)
  mhc4_test(parser parser_simple simple_big_number_int_3)
  mhc4_test(parser parser_simple simple_big_number_int_4)
  mhc4_test(parser parser_simple simple_big_number_char_0)
  mhc4_test(parser parser_simple simple_big_number_char_1)
  mhc4_test(parser parser_simple simple_number_0)
  mhc4_test(parser parser_simple simple_number_1)
  mhc4_test(parser parser_simple simple_number_2)
  mhc4_test(parser parser_simple simple_number_3)
  mhc4_test(parser parser_simple simple_number_4)
  mhc4_test(parser parser_simple simple_number_5)
  mhc4_test(parser parser_simple simple_number_6)
  mhc4_test(parser parser_simple simple_number_negative_0)
  mhc4_test(parser parser_simple simple_number_negative_1)
  mhc4_test(parser parser_simple simple_number_negative_2)
  mhc4_test(parser parser_simple simple_number_negative_3)
  mhc4_test(parser parser_simple simple_number_negative_4)
  mhc4_test(parser parser_simple simple_number_negative_5)
  mhc4_test(parser parser_simple simple_number_negative_6)
  mhc4_test(parser parser_simple simple_number_negative_7)
  mhc4_test(parser parser_simple simple_number_negative_8)
  mhc4_test(parser parser_simple simple_number_negative_9)
  mhc4_test(parser parser_simple simple_number_negative_10)
  mhc4_test(parser parser_simple simple_number_negative_11)
  mhc4_test(parser parser_simple simple_number_negative_12)
  mhc4_test(parser parser_simple simple_number_negative_13)
  mhc4_test(parser parser_simple simple_number_negative_14)
  mhc4_test(parser parser_simple simple_number_negative_15)
  mhc4_test(parser parser_simple simple_number_negative_16)
  mhc4_test(parser parser_simple simple_number_negative_17)
  mhc4_test(parser parser_simple simple_non_closed_block)
  mhc4_test(parser parser_simple simple_digraph_0)
  mhc4_test(parser parser_simple simple_digraph_1)
  mhc4_test(parser parser_simple simple_digraph_2)
  mhc4_test(parser parser_simple simple_digraph_3)

  mhc4_test(parser parser_declarations declaration_identifier_int)
  mhc4_test(parser parser_declarations declaration_identifier_char)
  mhc4_test(parser parser_declarations declaration_identifier_void_negative)
  mhc4_test(parser parser_declarations declaration_type_int)
  mhc4_test(parser parser_declarations declaration_type_char)
  mhc4_test(parser parser_declarations declaration_type_void)
  mhc4_test(parser parser_declarations declaration_function_type_int)
  mhc4_test(parser parser_declarations declaration_function_type_char)
  mhc4_test(parser parser_declarations declaration_function_type_void)
  mhc4_test(parser parser_declarations declaration_function_nameless)
  mhc4_test(parser parser_declarations declaration_function_parameter_0)
  mhc4_test(parser parser_declarations declaration_function_parameter_1)
  mhc4_test(parser parser_declarations declaration_function_parameter_2)
  mhc4_test(parser parser_declarations declaration_function_parameter_negative_0)
  mhc4_test(parser parser_declarations declaration_function_parameter_negative_1)
  mhc4_test(parser parser_declarations declaration_function_parameter_multiple_0)
  mhc4_test(parser parser_declarations declaration_function_parameter_multiple_1)
  mhc4_test(parser parser_declarations declaration_function_parameter_multiple_2)
  mhc4_test(parser parser_declarations declaration_function_parameter_multiple_negative_0)
  mhc4_test(parser parser_declarations declaration_function_parameter_multiple_negative_1)
  mhc4_test(parser parser_declarations declaration_function_decl_void_0)
  mhc4_test(parser parser_declarations declaration_function_decl_void_1)
  mhc4_test(parser parser_declarations declaration_function_decl_void_2)
  mhc4_test(parser parser_declarations declaration_complex_declarator_0)
  mhc4_test(parser parser_declarations declaration_compled_declarator_1)
  mhc4_test(parser parser_declarations declaration_struct_0)
  mhc4_test(parser parser_declarations declaration_struct_1)
  mhc4_test(parser parser_declarations declaration_struct_2)
  mhc4_test(parser parser_declarations declaration_struct_3)
  mhc4_test(parser parser_declarations declaration_struct_4)
  mhc4_test(parser parser_declarations declaration_struct_5)
  mhc4_test(parser parser_declarations declaration_struct_6)
  mhc4_test(parser parser_declarations declaration_struct_7)
  mhc4_test(parser parser_declarations declaration_struct_negative_0)
  mhc4_test(parser parser_declarations declaration_struct_negative_1)
  mhc4_test(parser parser_declarations declaration_struct_negative_2)
  mhc4_test(parser parser_declarations declaration_struct_negative_3)
  mhc4_test(parser parser_declarations declaration_struct_negative_4)
  mhc4_test(parser parser_declarations declaration_struct_negative_5)
  mhc4_test(parser parser_declarations declaration_struct_negative_6)
  mhc4_test(parser parser_declarations declaration_struct_negative_7)
  mhc4_test(parser parser_declarations declaration_struct_negative_8)
  mhc4_test(parser parser_declarations declaration_ptrfunc_0)
  mhc4_test(parser parser_declarations declaration_ptrfunc_1)
  mhc4_test(parser parser_declarations declaration_ptrfunc_2)
  mhc4_test(parser parser_declarations declaration_ptrfunc_3)
  mhc4_test(parser parser_declarations declaration_ptrfunc_4)
  mhc4_test(parser parser_declarations declaration_ptrfunc_5)
  mhc4_test(parser parser_declarations declaration_ptrfunc_6)
  mhc4_test(parser parser_declarations declaration_non_block)
  mhc4_test(parser parser_declarations declaration_non_block_negative_0)
  mhc4_test(parser parser_declarations declaration_non_block_negative_1)
  mhc4_test(parser parser_declarations declaration_array_0)
  mhc4_test(parser parser_declarations declaration_array_1)
  mhc4_test(parser parser_declarations declaration_struct_as_ret)
  mhc4_test(parser parser_declarations declaration_struct_ptr_array_0)
  mhc4_test(parser parser_declarations declaration_struct_ptr_array_1)
  mhc4_test(parser parser_declarations declaration_directly_assign)

  mhc4_test(parser parser_expression expression_primary_numeric)
  mhc4_test(parser parser_expression expression_primary_string)
  mhc4_test(parser parser_expression expression_primary_identifier_0)
  mhc4_test(parser parser_expression expression_primary_identifier_1)
  mhc4_test(parser parser_expression expression_parenthesis_0)
  mhc4_test(parser parser_expression expression_parenthesis_1)
  mhc4_test(parser parser_expression expression_parenthesis_2)
  mhc4_test(parser parser_expression expression_parenthesis_3)
  mhc4_test(parser parser_expression expression_parenthesis_negative_0)
  mhc4_test(parser parser_expression expression_parenthesis_negative_1)
  mhc4_test(parser parser_expression expression_parenthesis_negative_2)
  mhc4_test(parser parser_expression expression_parenthesis_negative_3)
  mhc4_test(parser parser_expression expression_unary_0)
  mhc4_test(parser parser_expression expression_unary_1)
  mhc4_test(parser parser_expression expression_unary_2)
  mhc4_test(parser parser_expression expression_unary_3)
  mhc4_test(parser parser_expression expression_unary_4)
  mhc4_test(parser parser_expression expression_unary_5)
  mhc4_test(parser parser_expression expression_unary_negative_0)
  mhc4_test(parser parser_expression expression_unary_negative_1)
  mhc4_test(parser parser_expression expression_unary_negative_2)
  mhc4_test(parser parser_expression expression_unary_multiple_0)
  mhc4_test(parser parser_expression expression_unary_multiple_1)
  mhc4_test(parser parser_expression expression_unary_multiple_2)
  mhc4_test(parser parser_expression expression_unary_multiple_3)
  mhc4_test(parser parser_expression expression_unary_multiple_negative_0)
  mhc4_test(parser parser_expression expression_unary_multiple_negative_1)
  mhc4_test(parser parser_expression expression_unary_multiple_negative_2)
  mhc4_test(parser parser_expression expression_negation_0)
  mhc4_test(parser parser_expression expression_negation_1)
  mhc4_test(parser parser_expression expression_negation_2)
  mhc4_test(parser parser_expression expression_negation_3)
  mhc4_test(parser parser_expression expression_negation_4)
  mhc4_test(parser parser_expression expression_negation_5)
  mhc4_test(parser parser_expression expression_conditional_0)
  mhc4_test(parser parser_expression expression_conditional_1)
  mhc4_test(parser parser_expression expression_conditional_2)
  mhc4_test(parser parser_expression expression_conditional_3)
  mhc4_test(parser parser_expression expression_conditional_4)
  mhc4_test(parser parser_expression expression_conditional_5)
  mhc4_test(parser parser_expression expression_conditional_6)
  mhc4_test(parser parser_expression expression_conditional_7)
  mhc4_test(parser parser_expression expression_binary_0)
  mhc4_test(parser parser_expression expression_binary_1)
  mhc4_test(parser parser_expression expression_binary_2)
  mhc4_test(parser parser_expression expression_binary_3)
  mhc4_test(parser parser_expression expression_binary_operators)
  mhc4_test(parser parser_expression expression_assign_0)
  mhc4_test(parser parser_expression expression_assign_1)
  mhc4_test(parser parser_expression expression_assign_2)
  mhc4_test(parser parser_expression expression_assign_3)
  mhc4_test(parser parser_expression expression_assign_4)
  mhc4_test(parser parser_expression expression_sqr_brackets_0)
  mhc4_test(parser parser_expression expression_sqr_brackets_1)
  mhc4_test(parser parser_expression expression_sqr_brackets_2)
  mhc4_test(parser parser_expression expression_sqr_brackets_3)
  mhc4_test(parser parser_expression expression_sqr_brackets_4)
  mhc4_test(parser parser_expression expression_sqr_brackets_negative_0)
  mhc4_test(parser parser_expression expression_sqr_brackets_negative_1)
  mhc4_test(parser parser_expression expression_sqr_brackets_negative_2)
  mhc4_test(parser parser_expression expression_sqr_brackets_negative_3)
  mhc4_test(parser parser_expression expression_sqr_brackets_negative_4)
  mhc4_test(parser parser_expression expression_period_0)
  mhc4_test(parser parser_expression expression_period_1)
  mhc4_test(parser parser_expression expression_period_2)
  mhc4_test(parser parser_expression expression_period_negative_0)
  mhc4_test(parser parser_expression expression_period_negative_1)
  mhc4_test(parser parser_expression expression_arrow_0)
  mhc4_test(parser parser_expression expression_arrow_1)
  mhc4_test(parser parser_expression expression_arrow_2)
  mhc4_test(parser parser_expression expression_arrow_negative_0)
  mhc4_test(parser parser_expression expression_arrow_negative_1)
  mhc4_test(parser parser_expression expression_postfix_combination_0)
  mhc4_test(parser parser_expression expression_postfix_combination_1)

  mhc4_test(parser parser_statements statement_compound_0)
  mhc4_test(parser parser_statements statement_compound_1)
  mhc4_test(parser parser_statements statement_compound_2)
  mhc4_test(parser parser_statements statement_compound_3)
  mhc4_test(parser parser_statements statement_compound_4)
  mhc4_test(parser parser_statements statement_label_0)
  mhc4_test(parser parser_statements statement_label_1)
  mhc4_test(parser parser_statements statement_label_2)
  mhc4_test(parser parser_statements statement_label_3)
  mhc4_test(parser parser_statements statement_label_negative_0)
  mhc4_test(parser parser_statements statement_label_negative_1)
  mhc4_test(parser parser_statements statement_label_negative_2)
  mhc4_test(parser parser_statements statement_label_negative_3)
  mhc4_test(parser parser_statements statement_label_negative_4)
  mhc4_test(parser parser_statements statement_expression_null)
  mhc4_test(parser parser_statements statement_expression_0)
  mhc4_test(parser parser_statements statement_expression_1)
  mhc4_test(parser parser_statements statement_expression_2)
  mhc4_test(parser parser_statements statement_expression_negative)
  mhc4_test(parser parser_statements statement_selection_0)
  mhc4_test(parser parser_statements statement_selection_1)
  mhc4_test(parser parser_statements statement_selection_2)
  mhc4_test(parser parser_statements statement_selection_3)
  mhc4_test(parser parser_statements statement_selection_4)
  mhc4_test(parser parser_statements statement_selection_5)
  mhc4_test(parser parser_statements statement_selection_6)
  mhc4_test(parser parser_statements statement_selection_7)
  mhc4_test(parser parser_statements statement_selection_8)
  mhc4_test(parser parser_statements statement_selection_9)
  mhc4_test(parser parser_statements statement_selection_10)
  mhc4_test(parser parser_statements statement_selection_11)
  mhc4_test(parser parser_statements statement_selection_12)
  mhc4_test(parser parser_statements statement_selection_13)
  mhc4_test(parser parser_statements statement_selection_negative_0)
  mhc4_test(parser parser_statements statement_selection_negative_1)
  mhc4_test(parser parser_statements statement_selection_negative_2)
  mhc4_test(parser parser_statements statement_selection_negative_3)
  mhc4_test(parser parser_statements statement_selection_negative_4)
  mhc4_test(parser parser_statements statement_selection_negative_5)
  mhc4_test(parser parser_statements statement_selection_negative_6)
  mhc4_test(parser parser_statements statement_selection_nested_0)
  mhc4_test(parser parser_statements statement_selection_nested_1)
  mhc4_test(parser parser_statements statement_selection_nested_2)
  mhc4_test(parser parser_statements statement_selection_nested_3)
  mhc4_test(parser parser_statements statement_selection_nested_4)
  mhc4_test(parser parser_statements statement_selection_nested_5)
  mhc4_test(parser parser_statements statement_selection_nested_negative_0)
  mhc4_test(parser parser_statements statement_selection_nested_negative_1)
  mhc4_test(parser parser_statements statement_selection_nested_negative_2)
  mhc4_test(parser parser_statements statement_iteration_0)
  mhc4_test(parser parser_statements statement_iteration_1)
  mhc4_test(parser parser_statements statement_iteration_2)
  mhc4_test(parser parser_statements statement_iteration_3)
  mhc4_test(parser parser_statements statement_iteration_negative_0)
  mhc4_test(parser parser_statements statement_iteration_negative_1)
  mhc4_test(parser parser_statements statement_iteration_nested_0)
  mhc4_test(parser parser_statements statement_iteration_nested_1)
  mhc4_test(parser parser_statements statement_iteration_nested_negative_0)
  mhc4_test(parser parser_statements statement_iteration_nested_negative_1)
  mhc4_test(parser parser_statements statement_jump_goto_0)
  mhc4_test(parser parser_statements statement_jump_goto_1)
  mhc4_test(parser parser_statements statement_jump_goto_2)
  mhc4_test(parser parser_statements statement_jump_goto_3)
  mhc4_test(parser parser_statements statement_jump_goto_4)
  mhc4_test(parser parser_statements statement_jump_goto_5)
  mhc4_test(parser parser_statements statement_jump_goto_negative_0)
  mhc4_test(parser parser_statements statement_jump_goto_negative_1)
  mhc4_test(parser parser_statements statement_jump_continue_0)
  mhc4_test(parser parser_statements statement_jump_continue_1)
  mhc4_test(parser parser_statements statement_jump_continue_2)
  mhc4_test(parser parser_statements statement_jump_continue_3)
  mhc4_test(parser parser_statements statement_jump_continue_4)
  mhc4_test(parser parser_statements statement_jump_break_0)
  mhc4_test(parser parser_statements statement_jump_break_1)
  mhc4_test(parser parser_statements statement_jump_break_2)
  mhc4_test(parser parser_statements statement_jump_break_3)
  mhc4_test(parser parser_statements statement_jump_break_4)
  mhc4_test(parser parser_statements statement_jump_return_0)
  mhc4_test(parser parser_statements statement_jump_return_1)
  mhc4_test(parser parser_statements statement_jump_return_2)
  mhc4_test(parser parser_statements statement_jump_return_3)
  mhc4_test(parser parser_statements statement_jump_return_negative_0)
  mhc4_test(parser parser_statements statement_jump_return_negative_1)
  mhc4_test(parser parser_statements statement_func_negative_0)

  mhc4_test(parser parser_examples example_faculty)
  mhc4_test(parser parser_examples example_faculty_recursive)
  mhc4_test(parser parser_examples example_fibonacci)
  mhc4_test(parser parser_examples example_fibonacci_array)
  mhc4_test(parser parser_examples example_fibonacci_bad_array)
  mhc4_test(parser parser_examples example_fibonacci_recursive_0)
  mhc4_test(parser parser_examples example_fibonacci_recursive_1)
  mhc4_test(parser parser_examples example_fibonacci_with_declarator)
  mhc4_test(parser parser_examples example_struct_manipulation)
  mhc4_test(parser parser_examples example_hello_world)

  #### SEMANTIC
  mhc4_test(semantic semantic_simple sem_simple_function_parameter_negative_0)
  mhc4_test(semantic semantic_simple sem_simple_function_parameter_negative_1)
  mhc4_test(semantic semantic_simple sem_simple_duplicate_struct)
  mhc4_test(semantic semantic_simple sem_simple_duplicate_field)
  mhc4_test(semantic semantic_simple sem_simple_duplicate_field_negative)
  mhc4_test(semantic semantic_simple sem_simple_duplicate_function_parameter)
  mhc4_test(semantic semantic_simple sem_simple_duplicate_function_parameter_negative)
  mhc4_test(semantic semantic_simple sem_simple_same_param_var)
  mhc4_test(semantic semantic_simple sem_simple_semantic_digraph_0)
  mhc4_test(semantic semantic_simple sem_simple_semantic_digraph_1)

  mhc4_test(semantic semantic_name name_simple_0)
  mhc4_test(semantic semantic_name name_simple_1)
  mhc4_test(semantic semantic_name name_simple_2)
  mhc4_test(semantic semantic_name name_simple_negative_0)
  mhc4_test(semantic semantic_name name_simple_negative_1)
  mhc4_test(semantic semantic_name name_goto_0)
  mhc4_test(semantic semantic_name name_goto_1)
  mhc4_test(semantic semantic_name name_goto_negative_0)
  mhc4_test(semantic semantic_name name_goto_negative_1)
  mhc4_test(semantic semantic_name name_goto_negative_2)
  mhc4_test(semantic semantic_name name_function_0)
  mhc4_test(semantic semantic_name name_function_1)
  mhc4_test(semantic semantic_name name_function_2)
  mhc4_test(semantic semantic_name name_function_negative_0)
  mhc4_test(semantic semantic_name name_function_negative_1)
  mhc4_test(semantic semantic_name name_function_parameters_0)
  mhc4_test(semantic semantic_name name_function_parameters_1)
  mhc4_test(semantic semantic_name name_function_parameters_negative_0)
  mhc4_test(semantic semantic_name name_function_parameters_negative_1)
  mhc4_test(semantic semantic_name name_function_parameters_negative_2)
  mhc4_test(semantic semantic_name name_field_0)
  mhc4_test(semantic semantic_name name_field_1)
  mhc4_test(semantic semantic_name name_field_negative_0)
  mhc4_test(semantic semantic_name name_field_negative_1)
  mhc4_test(semantic semantic_name name_hiding_function_0)
  mhc4_test(semantic semantic_name name_hiding_function_1)
  mhc4_test(semantic semantic_name name_hiding_function_2)
  mhc4_test(semantic semantic_name name_hiding_function_negative_0)
  mhc4_test(semantic semantic_name name_hiding_function_negative_1)
  mhc4_test(semantic semantic_name name_hiding_function_negative_2)
  mhc4_test(semantic semantic_name name_program_scope_negative)
  mhc4_test(semantic semantic_name name_scope_category_0)
  mhc4_test(semantic semantic_name name_scope_category_1)
  mhc4_test(semantic semantic_name name_scope_category_2)
  mhc4_test(semantic semantic_name name_scope_category_3)

  mhc4_test(semantic semantic_constraint constraint_goto_negative_0)
  mhc4_test(semantic semantic_constraint constraint_goto_negative_1)
  mhc4_test(semantic semantic_constraint constraint_continue_negative_0)
  mhc4_test(semantic semantic_constraint constraint_continue_negative_1)
  mhc4_test(semantic semantic_constraint constraint_continue_negative_2)
  mhc4_test(semantic semantic_constraint constraint_break_negative_0)
  mhc4_test(semantic semantic_constraint constraint_break_negative_1)
  mhc4_test(semantic semantic_constraint constraint_break_negative_2)
  mhc4_test(semantic semantic_constraint constraint_return_negative_0)
  mhc4_test(semantic semantic_constraint constraint_return_negative_1)

  mhc4_test(semantic semantic_type type_simple_0)
  mhc4_test(semantic semantic_type type_simple_1)
  mhc4_test(semantic semantic_type type_simple_2)
  mhc4_test(semantic semantic_type type_simple_3)
  mhc4_test(semantic semantic_type type_pointer_0)
  mhc4_test(semantic semantic_type type_pointer_1)
  mhc4_test(semantic semantic_type type_pointer_2)
  mhc4_test(semantic semantic_type type_pointer_negative_0)
  mhc4_test(semantic semantic_type type_pointer_negative_1)
  mhc4_test(semantic semantic_type type_compare_0)
  mhc4_test(semantic semantic_type type_compare_1)
  mhc4_test(semantic semantic_type type_compare_2)
  mhc4_test(semantic semantic_type type_compare_3)
  mhc4_test(semantic semantic_type type_function_0)
  mhc4_test(semantic semantic_type type_function_1)
  mhc4_test(semantic semantic_type type_function_2)
  mhc4_test(semantic semantic_type type_function_3)
  mhc4_test(semantic semantic_type type_function_return_0)
  mhc4_test(semantic semantic_type type_function_return_1)
  mhc4_test(semantic semantic_type type_arrow_negative)
  mhc4_test(semantic semantic_type type_period_negative)
  mhc4_test(semantic semantic_type type_conditional_negative)
  mhc4_test(semantic semantic_type type_l_value_negative_0)
  mhc4_test(semantic semantic_type type_l_value_negative_1)
  mhc4_test(semantic semantic_type type_struct_0)
  

  ##################
endif()
